prevent legend highlighting when shift-clicking

--- a/web/gui/dashboard.css
+++ b/web/gui/dashboard.css
@@ -337,9 +337,17 @@ body {
     /* -webkit-font-smoothing: none; */
 }
 
+.netdata-legend-value, .netdata-legend-name {
+  /* prevent highlight when shift-clicking */
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
 /* eslint recommends adding tabIndex for a11y, but the outline is showing on click */
 .netdata-legend-name:focus, .netdata-legend-value:focus {
-  outline: none;
+    outline: none;
 }
 
 .netdata-legend-name.not-selected {
